@@ -4,6 +4,7 @@ Date: ????
   Changes:
     - Fixed missing migration handlers
     - Removed eccentric globals
+    - Added entity validation to more processes to avoid potential issues
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.14
 Date: 2025-12-21
